--- a/src/App.css
+++ b/src/App.css
@@ -108,10 +108,11 @@ button:hover {
 
 .app-main {
   width: 70%;
-  height: 100%;
+  height: 100vh;
 }
-.app-main-note-edit{
-  height: 100%;
+.app-main-note-edit,
+.app-main-note-preview {
+  height: 50vh;
 }
 
 .no-active-note {
@@ -124,17 +125,17 @@ button:hover {
 }
 
 /* Editing */
-.app-main-note-edit {
-  padding: 25px;
+.app-main-note-edit,
+.app-main-note-preview {
+  height: 50vh;
 }
-
 .app-main-note-edit input,
 textarea {
   display: block;
-  border: none;
+  border: 1px solid #ddd;
   margin-bottom: 20px;
   width: 100%;
-  height: 90%;
+  height: calc(50vh - 130px);
   padding: 10px;
   resize: none;
   font-size: inherit;
@@ -150,4 +151,22 @@ textarea {
 }
 textarea{
   outline: none;
+}
+
+/* Preview */
+.app-main-note-preview {
+  border-top: 1px solid #ddd;
+  overflow-y: scroll;
+  background: rgba(0, 0, 0, 0.02);
+}
+
+.preview-title {
+  padding: 25px 25px 0 25px;
+  margin: 0;
+}
+
+.markdown-preview {
+  padding: 0 25px 25px 25px;
+  font-size: 1rem;
+  line-height: 2rem;
 }
